--- a/APM/src/app/products/product-list.component.html
+++ b/APM/src/app/products/product-list.component.html
@@ -34,7 +34,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor = "let product of products">
+                    <tr *ngFor = "let product of filteredProducts">
                         <td>
                             <img *ngIf='showImage'
                             [src] = 'product.imageUrl'
@@ -42,11 +42,12 @@
                             [style.width.px] = 'imageWidth'
                             [style.margin.px] = 'imageMargin'>
                         </td>
-                        <td>{{product.productName}}</td>
-                        <td>{{product.productCode}}</td>
+                        <td><a [routerLink] = "['/products', product.productId]">{{product.productName}}</a></td>
+                        <td>{{product.productCode | lowercase | convertToSpaces: "-"}}</td>
                         <td>{{product.releaseDate}}</td>
-                        <td>{{product.price}}</td>
-                        <td>{{product.starRating}}</td>
+                        <td>{{product.price | currency:"USD":true:"1.2-2"}}</td>
+                        <td><pm-star [rating]="product.starRating"
+                                     (ratingClicked)="onRatingClicked($event)"></pm-star></td>
                     </tr>
                 </tbody>
             </table>
